P1673: Add missing period

--- a/D1673/D1673R13-running-revision.html
+++ b/D1673/D1673R13-running-revision.html
@@ -14,7 +14,7 @@ div.column{display: inline-block; vertical-align: top; width: 50%;}
 </style>
   <style>
 pre > code.sourceCode { white-space: pre; position: relative; }
-pre > code.sourceCode > span { display: inline-block; line-height: 1.25; }
+pre > code.sourceCode > span { line-height: 1.25; }
 pre > code.sourceCode > span:empty { height: 1.2em; }
 .sourceCode { overflow: visible; }
 code.sourceCode > span { color: inherit; text-decoration: inherit; }
@@ -8426,7 +8426,7 @@ Let <code>T</code> be <code>decltype(</code>
 <code>(declval&lt;typename InVec::value_type&gt;())) +</code>
 <em><code>abs-if-needed</code></em><code>(</code>
 <em><code>imag-if-needed</code></em>
-<code>(declval&lt;typename InVec::value_type&gt;())))</code></p>
+<code>(declval&lt;typename InVec::value_type&gt;())))</code>.</p>
 <p><span class="marginalizedparent"><a class="marginalized">2</a></span>
 <em>Mandates:</em>
 <code>declval&lt;T&gt;() &lt; declval&lt;T&gt;()</code> is a valid
