--- a/D1673/D1673R13-running-revision.html
+++ b/D1673/D1673R13-running-revision.html
@@ -1391,6 +1391,8 @@ unless explicitly permitted.</p></li>
 <li><p>Make sure that Complexity clauses use a math multiplication
 symbol instead of code-font <code>*</code>. (The latter would cause
 unwarranted overflow issues, especially for BLAS 3 functions.)</p></li>
+<li><p>Make sure that <code>conjugated</code> is trivial if
+<em><code>conj-if-needed</code></em> would be.</p></li>
 </ul></li>
 </ul>
 <h1 data-number="3" id="purpose-of-this-paper"><span class="header-section-number">3</span> Purpose of this paper<a href="#purpose-of-this-paper" class="self-link"></a></h1>
