P3050: R3 draft: Fix audience

--- a/conjugated/D3050R3.html
+++ b/conjugated/D3050R3.html
@@ -430,7 +430,7 @@ linalg::conjugated for noncomplex value types</h1>
   <tr>
     <td style="vertical-align:top">Project: </td>
     <td>Programming Language C++<br>
-      LEWG<br>
+      LWG<br>
     </td>
   </tr>
   <tr>
