P3050: R3 draft: Update history

--- a/conjugated/D3050R3.html
+++ b/conjugated/D3050R3.html
@@ -491,9 +491,9 @@ may no longer have const <code>element_type</code></a></li>
 <h1 data-number="2" id="revision-history"><span class="header-section-number">2</span> Revision history<a href="#revision-history" class="self-link"></a></h1>
 <ul>
 <li><p>Revision 0 was submitted for the post-Kona mailing on
-2023/11/15.</p></li>
+2023-11-15.</p></li>
 <li><p>Revision 1 will be submitted for the post-Tokyo mailing on
-2024/04/16.</p>
+2024-04-16.</p>
 <ul>
 <li><p>Add explanation to Wording section (actual wording change is not
 affected)</p></li>
@@ -502,18 +502,23 @@ affected)</p></li>
 <li><p>Change title and abstract, to emphasize that delaying this until
 after C++26 would be a breaking change</p></li>
 </ul></li>
-<li><p>Revision 2 will be submitted by 2024/08/15.</p>
+<li><p>Revision 2 will be submitted by 2024-08-15.</p>
 <ul>
 <li><p>Minor wording fix (define “<code>E</code>” in
 “<code>conj(E)</code>”)</p></li>
 <li><p>Bump value of <code>__cpp_lib_linalg</code> macro</p></li>
 <li><p>Add nonwording “Presentation” section</p></li>
 </ul></li>
-<li><p>Revision 2 will be submitted after LWG review on 2024/10/25.</p>
+<li><p>Revision 3 will be submitted after LWG review on 2024-10-25.</p>
 <ul>
-<li>Change wording instructions to use green and red text to show
+<li><p>Revision 2 was approved by LEWG on 2024-09-03 (B0 “now or never”
+priority, unanimous consent), to be confirmed by electronic poll
+(October, in progress). A poll to request a new feature test macro,
+rather than bumping <code>__cpp_lib_linalg</code>, did not have
+consensus for change.</p></li>
+<li><p>Change wording instructions to use green and red text to show
 changes better. Make minor wording changes just for consistency with
-word order in the Working Draft, without changing the meaning.</li>
+word order in the Working Draft, without changing the meaning.</p></li>
 </ul></li>
 </ul>
 <h1 data-number="3" id="abstract"><span class="header-section-number">3</span> Abstract<a href="#abstract" class="self-link"></a></h1>
