--- a/conjugated/D3050R3.html
+++ b/conjugated/D3050R3.html
@@ -518,7 +518,19 @@ rather than bumping <code>__cpp_lib_linalg</code>, did not have
 consensus for change.</p></li>
 <li><p>Change wording instructions to use green and red text to show
 changes better. Make minor wording changes just for consistency with
-word order in the Working Draft, without changing the meaning.</p></li>
+word order in the Working Draft.</p></li>
+<li><p>Suggestions from pre-LWG review feedback:</p>
+<ul>
+<li><p>Change “whose type <code>T</code> is expression-equivalent to
+remove_cvref_t<ElementType>” to “whose type is
+<code>remove_cvref_t&lt;ElementType&gt;</code>.”</p></li>
+<li><p>Make sure the deleted <code>conj</code> declaration has a return
+type (<code>T</code>).</p></li>
+<li><p>Combine 2.2 and 2.3 into “otherwise, if
+<code>is_same_v&lt;A, Accessor&gt;</code> is <code>true</code>,
+<code>a</code>” – this does not change the meaning, but avoids repeating
+the conditions of 1.2 and 1.3.</p></li>
+</ul></li>
 </ul></li>
 </ul>
 <h1 data-number="3" id="abstract"><span class="header-section-number">3</span> Abstract<a href="#abstract" class="self-link"></a></h1>
@@ -938,9 +950,9 @@ proposal’s date of adoption.</p>
 follows. (Paragraph 1 has been reorganized from a sentence into four
 bullet points, where Paragraphs 1.2 and 1.3 represent the changes.
 Similarly, Paragraph 2 has been reorganized from two bullet points into
-four. The old Paragraph 2.2 has been changed to 2.4, and the new
-Paragraphs 2.2 and 2.3 have been inserted as the middle bullet points.)
-Text to add is shown in green, and text to remove is shown in red.</p>
+three. The old Paragraph 2.2 has been changed to 2.3, and the new
+Paragraph 2.2 has been inserted as the middle bullet point.) Text to add
+is shown in green, and text to remove is shown in red.</p>
 </blockquote>
 <p><span style="color: red;"> <span class="marginalizedparent"><a class="marginalized">1</a></span> Let
 <code>A</code> be
@@ -961,10 +973,9 @@ arithmetic type, <code>Accessor</code>; </span></p>
 <p><span style="color: green;"> <span class="marginalizedparent"><a class="marginalized">(1.3)</a></span>
 otherwise, if the expression <code>conj(E)</code> is not valid for any
 subexpression <code>E</code> whose type <code>T</code> is
-expression-equivalent to <code>remove_cvref_t&lt;ElementType&gt;</code>
-with overload resolution performed in a context that includes the
-declaration
-<code>template&lt;class T&gt; conj(const T&amp;) = delete;</code>,
+<code>remove_cvref_t&lt;ElementType&gt;</code> with overload resolution
+performed in a context that includes the declaration
+<code>template&lt;class T&gt; T conj(const T&amp;) = delete;</code>,
 <code>Accessor</code>; </span></p>
 <p><span style="color: green;"> <span class="marginalizedparent"><a class="marginalized">(1.4)</a></span>
 otherwise, <code>conjugated_accessor&lt;Accessor&gt;</code>. </span></p>
@@ -975,17 +986,9 @@ otherwise, <code>conjugated_accessor&lt;Accessor&gt;</code>. </span></p>
 <code>conjugated_accessor</code>,
 <code>mdspan&lt;typename A::element_type, Extents, Layout, A&gt;(a.data_handle(), a.mapping(), a.accessor().nested_accessor())</code>;</p>
 <p><span style="color: green;"> <span class="marginalizedparent"><a class="marginalized">(2.2)</a></span>
-otherwise, if <code>remove_cvref_t&lt;ElementType&gt;</code> is an
-arithmetic type, <code>a</code>; </span></p>
-<p><span style="color: green;"> <span class="marginalizedparent"><a class="marginalized">(2.3)</a></span>
-otherwise, if the expression <code>conj(E)</code> is not valid for any
-subexpression <code>E</code> whose type <code>T</code> is
-expression-equivalent to <code>remove_cvref_t&lt;ElementType&gt;</code>
-with overload resolution performed in a context that includes the
-declaration
-<code>template&lt;class T&gt; conj(const T&amp;) = delete;</code>,
-<code>a</code>; </span></p>
-<p><span class="marginalizedparent"><a class="marginalized">(2.4)</a></span>
+otherwise, if <code>is_same_v&lt;A, Accessor&gt;</code> is
+<code>true</code>, <code>a</code>; </span></p>
+<p><span class="marginalizedparent"><a class="marginalized">(2.3)</a></span>
 otherwise,
 <code>mdspan&lt;typename A::element_type, Extents, Layout, A&gt;(a.data_handle(), a.mapping(), conjugated_accessor(a.accessor()))</code>.</p>
 </div>
