P2897 (aligned_accessor): Fix precondition

--- a/aligned_accessor/D2897R6.html
+++ b/aligned_accessor/D2897R6.html
@@ -1856,10 +1856,9 @@ an object of type <code>aligned_accessor</code> if and only if</p>
 <ul>
 <li><p><span class="marginalizedparent"><a class="marginalized">(5.1)</a></span>
 <span class="math inline">[</span><code>p</code>, <code>p</code> + <span class="math inline"><em>n</em>)</span> is a valid range; and</p></li>
-<li><p><span class="marginalizedparent"><a class="marginalized">(5.2)</a></span> for
-each integer <span class="math inline"><em>k</em></span> in <span class="math inline">[0, <em>n</em>)</span>,
-<code>is_sufficiently_aligned(p +</code><span class="math inline"><em>k</em></span><code>)</code> is
-<code>true</code>.</p></li>
+<li><p><span class="marginalizedparent"><a class="marginalized">(5.2)</a></span> if
+<span class="math inline"><em>n</em></span> is greater than zero, then
+<code>is_sufficiently_aligned(p)</code> is <code>true</code>.</p></li>
 </ul>
 <p><i>[Editorial note:</i> Condition 5.2 is new as of version 6. <i>—
 end editorial note]</i></p>
